# aivoice

./: .gitignore  README.md  app_main.py  pyproject.toml  setup_app.py
docs/: plan.md
scripts/: build_app.sh  codesign_dev.sh  gen_icon.py  make_fixtures.py
src/aivoice/: __main__.py  config.py
src/aivoice/pipeline/: audio.py  inject.py  orchestrator.py  vad.py
src/aivoice/pipeline/cleanup/: base.py  ollama_cleaner.py  openai_cleaner.py  prompts.py
src/aivoice/pipeline/stt/: __init__.py  base.py  cloud_groq.py  local_mlx.py
src/aivoice/ui/: hotkey.py  menubar.py
src/aivoice/utils/: keychain.py  perms.py
tests/: conftest.py  test_audio.py  test_cleanup_prompts.py  test_config.py  test_inject.py  test_orchestrator.py  test_stt_local.py  test_vad.py
