[project]
name = "aivoice"
version = "0.1.0"
description = "Local-first voice dictation for macOS"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26,<2.0",
    "silero-vad>=5.1.2",
    "onnxruntime>=1.20",
    "pynput>=1.7.7",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pydantic-settings>=2.6",
    "keyring>=25.5",
    "httpx>=0.27",
    "openai>=1.55",
    "groq>=0.13",
    "ollama>=0.4",
    "mlx-whisper>=0.4.2 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.scripts]
aivoice = "aivoice.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "soundfile>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aivoice"]
